--- a/package.json
+++ b/package.json
@@ -15,5 +15,21 @@
   "bugs": {
     "url": "https://github.com/justinanastos/angular-cs/issues"
   },
-  "homepage": "https://github.com/justinanastos/angular-cs"
+  "homepage": "https://github.com/justinanastos/angular-cs",
+  "devDependencies": {
+    "chalk": "^0.5.1",
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-sass": "^0.8.1",
+    "grunt-contrib-symlink": "^0.3.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-jscs": "^0.8.1",
+    "grunt-scsslint": "^0.1.0",
+    "justin-anastos-frontend-standards": "^1.0.0",
+    "matchdep": "^0.3.0",
+    "semver": "^4.1.0",
+    "shelljs": "^0.3.0",
+    "underscore": "^1.7.0",
+    "underscore.string": "^2.3.3"
+  }
 }
