--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/justinanastos/angular-cs",
   "devDependencies": {
     "chalk": "^0.5.1",
+    "express": "^4.10.0",
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-sass": "^0.8.1",
@@ -29,6 +30,7 @@
     "matchdep": "^0.3.0",
     "semver": "^4.1.0",
     "shelljs": "^0.3.0",
+    "staged-github-files": "^1.0.3",
     "underscore": "^1.7.0",
     "underscore.string": "^2.3.3"
   }
